; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_check_foreground_window.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_check_foreground_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.game_capture = type { float, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.game_capture*, float)* @check_foreground_window to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_foreground_window(%struct.game_capture* %0, float %1) #0 {
  %3 = alloca %struct.game_capture*, align 8
  %4 = alloca float, align 4
  %5 = alloca i64, align 8
  store %struct.game_capture* %0, %struct.game_capture** %3, align 8
  store float %1, float* %4, align 4
  %6 = load float, float* %4, align 4
  %7 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %8 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %7, i32 0, i32 0
  %9 = load float, float* %8, align 8
  %10 = fadd float %9, %6
  store float %10, float* %8, align 8
  %11 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %12 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %11, i32 0, i32 0
  %13 = load float, float* %12, align 8
  %14 = fcmp oge float %13, 0x3FB99999A0000000
  br i1 %14, label %15, label %32

15:                                               ; preds = %2
  %16 = call i32 (...) @GetForegroundWindow()
  %17 = call i32 @GetWindowThreadProcessId(i32 %16, i64* %5)
  %18 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %19 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* %5, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %26

23:                                               ; preds = %15
  %24 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %25 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %24, i32 0, i32 2
  store i32 1, i32* %25, align 8
  br label %29

26:                                               ; preds = %15
  %27 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %28 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %27, i32 0, i32 2
  store i32 0, i32* %28, align 8
  br label %29

29:                                               ; preds = %26, %23
  %30 = load %struct.game_capture*, %struct.game_capture** %3, align 8
  %31 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %30, i32 0, i32 0
  store float 0.000000e+00, float* %31, align 8
  br label %32

32:                                               ; preds = %29, %2
  ret void
}

declare dso_local i32 @GetWindowThreadProcessId(i32, i64*) #1

declare dso_local i32 @GetForegroundWindow(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
